--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -17,6 +17,34 @@
   </div>
   {% endif %}
 </div>
+      <script src='//cdn.jsdelivr.net/npm/@waline/client/dist/Waline.min.js'></script>
+  <script src="https://cdn.staticfile.org/jquery/2.2.4/jquery.min.js"></script>
+      <div id="comment"></div>
+  
+    <div id="comment" class="comments-area"></div>
+          <script>
+            //这一段是初始化Waline的,visitor: true记得开启
+            new Waline({
+                el:'#waline',
+                serverURL: 'https://pl11.vercel.app',
+                appId: 'kR0DrhYz290MWeAFzRc5vq73-MdYXbMMI',
+                appKey: 'yTOj3tkTwHdUNYq0CrfvTQPT',
+                avatar:'monsterid',
+                recordIP:false,
+                requiredFields:['nick'],
+                visitor: true,
+                //path:"/",
+                placeholder:"整两句..."
+            })
+            //这一段是加载最近评论的
+            window.addEventListener('load', function() {
+              Waline.Widget.RecentComments({
+                el: '#waline-recent',
+                serverURL: 'https://pl11.vercel.app',
+                count: 10
+              });
+            });
+        </script>
 {% include footer.html -%}
 {% include script.html -%}
 </body>
