--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -16,7 +16,7 @@
     {% include ext-adsense.html -%}
   </div>
   {% endif %}
-    </div>
+</div>
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
     <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
     <div id="comment"></div>
@@ -25,9 +25,9 @@
     <script>
         new Valine({
             el:'#comment',
-            appId: 'zQtWkYDBWng6LElPfb1hH9iT-MdYXbMMI',
-            appKey: 'SK41j9uxfsN7zQFdl52jBIoH',
-            avatar:'monsterid'
+                appId: 'kR0DrhYz290MWeAFzRc5vq73-MdYXbMMI',
+                appKey: 'yTOj3tkTwHdUNYq0CrfvTQPT',
+                avatar:'monsterid',
             placeholder:"评论可以一针见血..."
         })
     </script>
