--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -18,7 +18,7 @@
   {% endif %}
 </div>
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
-    <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
+    <script src='//cdn.jsdelivr.net/npm/@waline/client/dist/Waline.min.js'></script>
     <div id="comment"></div>
   
     <div id="comment" class="comments-area"></div>
