--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -18,7 +18,7 @@
   {% endif %}
 </div>
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
-    <script src='//cdn.jsdelivr.net/npm/@waline/client/dist/Waline.min.js'></script>
+    <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
     <div id="comment"></div>
   
     <div id="comment" class="comments-area"></div>
@@ -28,7 +28,7 @@
                 appId: 'kR0DrhYz290MWeAFzRc5vq73-MdYXbMMI',
                 appKey: 'yTOj3tkTwHdUNYq0CrfvTQPT',
                 avatar:'monsterid',
-            placeholder:"评论可以一针见血..."
+            placeholder:"讲两句???..."
         })
     </script>
 {% include footer.html -%}
