--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,20 +17,20 @@
   <meta name="description" content="{{ site.description }}"/>
   <meta name="keywords" content="{{ site.keywords }}"/>
   {% endif -%}
-  <link rel="icon" href="{{site.baseurl}}/static/img/favicon.ico" />
-  <link rel="apple-touch-icon" href="{{site.baseurl}}/static/img/logo.png" />
-  <link rel="stylesheet" href="{{site.baseurl}}/static/css/common.css?t={{buildAt}}">
-  <link rel="stylesheet" href="{{site.baseurl}}/static/css/theme-dark.css?t={{buildAt}}">
+  <link rel="icon" href="https://cdn.jsdelivr.net/gh/venenl/venenl.github.io@master/static/img/favicon.ico" />
+  <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/venenl/venenl.github.io@master/static/img/logo.png" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/venenl/venenl.github.io@master/static/css/common.css?t={{buildAt}}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/venenl/venenl.github.io@master/static/css/theme-dark.css?t={{buildAt}}">
   {%- if page.layout == "mypost" %}
-  <link rel="stylesheet" href="{{site.baseurl}}/static/css/post.css?t={{buildAt}}">
-  <link rel="stylesheet" href="{{site.baseurl}}/static/css/code-dark.css?t={{buildAt}}">
-  <link rel="stylesheet" href="{{site.baseurl}}/static/css/code-light.css?t={{buildAt}}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/venenl/venenl.github.io@master/static/css/post.css?t={{buildAt}}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/venenl/venenl.github.io@master/static/css/code-dark.css?t={{buildAt}}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/venenl/venenl.github.io@master/static/css/code-light.css?t={{buildAt}}">
   {%- endif %}
   {%- if page.layout == "page" %}
-  <link rel="stylesheet" href="{{site.baseurl}}/static/css/page.css?t={{buildAt}}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/venenl/venenl.github.io@master/static/css/page.css?t={{buildAt}}">
   {%- endif %}
   <link rel="prefetch" href="{{site.baseurl}}/static/xml/search.xml?t={{ buildAt }}">
-  <link rel="prefetch" href="{{site.baseurl}}/static/js/search.js?t={{ buildAt }}">
+  <link rel="prefetch" href="https://cdn.jsdelivr.net/gh/venenl/venenl.github.io@master/static/js/search.js?t={{ buildAt }}">
   <script>
     window.blog = {
       baseurl:"{{site.baseurl}}",
