--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,6 +1,6 @@
 {%- assign buildAt = site.time | date: "%Y%m%d%H%M%S" -%}
-<script type="text/javascript" src="{{site.baseurl}}/static/js/blog.js?t={{ buildAt }}"></script>
-<script type="text/javascript" src="{{site.baseurl}}/static/js/search.js?t={{ buildAt }}"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/venenl/venenl.github.io@master/static/js/blog.js?t={{ buildAt }}"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/venenl/venenl.github.io@master/static/js/search.js?t={{ buildAt }}"></script>
 
 {%- if site.extClickEffect %}
 <!-- 点击页面文字冒出特效 -->
