--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <img class="logo" src="https://cdn.jsdelivr.net/gh/venenl/venenl.github.io@master/static/img/logo.jpg" alt="logo"/>
+  <img class="logo" src="https://thiscatdoesnotexist.com" alt="logo"/>
   <nav class="menu">
     {% for menu in site.menu -%}
 
