--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,5 +15,7 @@
 
       <a href="{{href}}" {{target}} class="hover-underline">{{ menu.title }}</a>
     {% endfor -%}
+    
+    <u><br><span id="hitokoto">获取中...</span></br></u>
   </nav>
 </header>
