--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
   {%- comment %} 请保留主题来源，么么哒~ {% endcomment %}
   <span>Theme By</span>
   <a href="https://github.com/TMaize/tmaize-blog">TMaize</a>
+  <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
 </footer>
 <div id="to-top">
   <span></span>
