--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -22,6 +22,8 @@
   <script>
     Waline({
       el: '#waline',
+        // ...
+  visitor: true, // 阅读量统计
       serverURL: 'https://pl11.vercel.app',
     });
   </script>
