--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -6,7 +6,7 @@
 <div class="page page-post">
   <h1 class="title" id="{{ page.title }}">{{ page.title }}</h1>
   {% if page.date %}
-  <div class="subtitle">{{site.author}} 于 {{ page.date | date: "%Y-%m-%d" }} 阅读量: <span id="<Your/Path/Name>" class="waline-visitor-count" /></div>
+  <div class="subtitle">{{site.author}} 于 {{ page.date | date: "%Y-%m-%d" }} 发布</div>
   {% endif %}
   <div class="post">
     {{ content }}
@@ -22,8 +22,6 @@
   <script>
     Waline({
       el: '#waline',
-        // ...
-  visitor: true, // 阅读量统计
       serverURL: 'https://pl11.vercel.app',
     });
   </script>
