--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,5 +17,6 @@
     {% endfor -%}
     
     <u><br><span id="hitokoto">获取中...</span></br></u>
+  <script type=”text/javascript”src=”https://api.iyk0.com/tiangou/”>
   </nav>
 </header>
