--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   {%- comment %} 请保留主题来源，么么哒~ {% endcomment %}
   <span>Theme By</span>
   <a href="https://github.com/TMaize/tmaize-blog">TMaize</a>
-  <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
+  <script src="https://api.iyk0.com/tiangou/"></script>
   <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280815982'%3E%3C/span%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1280815982%26online%3D2' type='text/javascript'%3E%3C/script%3E"));</script>
 </footer>
 <div id="to-top">
