--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -22,7 +22,7 @@
   <script>
     Waline({
       el: '#waline',
-      serverURL: 'https://pl11.vercel.app',
+      serverURL: 'https://waline.llov.eu.org',
     });
   </script>
 {% include footer.html -%}
