--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -7,6 +7,13 @@
   <h1 class="title" id="{{ page.title }}">{{ page.title }}</h1>
   {% if page.date %}
   <div class="subtitle">{{site.author}} 于 {{ page.date | date: "%Y-%m-%d" }} 发布</div>
+  
+  <div id="article-info">
+  <!-- ... -->
+  阅读量: <span class="waline-pageview-count" data-path="<Your/Path/Name>" />
+  <!-- ... -->
+</div>
+  
   {% endif %}
   <div class="post">
     {{ content }}
@@ -25,6 +32,18 @@
       serverURL: 'https://waline.llov.eu.org',
     });
   </script>
+  
+  <div id="waline"></div>
+<script type="module">
+  import { init } from 'https://unpkg.com/@waline/client@v2/dist/waline.mjs';
+
+  init({
+    el: '#waline',
+    // ...
+    pageview: true, // 浏览量统计
+  });
+</script>
+  
 {% include footer.html -%}
 {% include script.html -%}
 </body>
